# safe-uninit

./: .gitignore  Cargo.toml  readme.md
src/: foreign.rs  foreign_alloc.rs  foreign_core.rs  lib.rs
