[package]
name = "safe-uninit"
version = "0.1.0"
authors = ["Max Naumchyk <max.naumch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["memory-management", "no-std"]
keywords = ["uninitialized", "uninit", "maybeuninit"]
# license = "..."
# readme = "..."
maintenance = { status = "actively-developed" }