[package]
name = "safe-uninit"
version = "0.1.0"
authors = ["Max Naumchyk <max.naumch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "Safe unitialized types to reduce code avoiding MaybeUninit where safe"
categories = ["memory-management", "no-std"]
repository = "https://github.com/max-ym/safe-uninit"
keywords = ["uninitialized", "uninit", "maybeuninit", "optimization"]
license = "MIT"
readme = "readme.md"
maintenance = { status = "passively-maintained" }

[dependencies]
safe-uninit-derive = "0.1.0"
